# flatsnap

./: Cargo.toml  README.md  build.rs
schema/: snapshot.fbs
src/: errors.rs  main.rs
